fix(css): html height 100% blocked scrolling on mobile Safari

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -107,7 +107,12 @@
 
 html,
 body {
-    height: 100%;
+    height: auto;
+    min-height: 100%;
+}
+
+html {
+    overflow-y: auto;
 }
 
 body {
